bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {(Math.abs(a-10)<11||(9<b<21)
}